# whisper-api-webservice

./: .gitignore  Dockerfile  Dockerfile-whisper-gpu  Dockerfile-whisper-tpu  Jenkinsfile  pyproject.toml  run.sh
app/: webservice.py
webservice/: webservice.py
