[tool.poetry]
name = "whisper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
gradio-client = "^0.5.3"
unidecode = "^1.3.4"
uvicorn = { extras = ["standard"], version = "^0.18.2" }
gunicorn = "^20.1.0"
tqdm = "^4.64.1"
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"
numpy = "^1.16.4"
uuid = "^1.30"
transformers = "^4.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
